[package]
name = "broker-korea"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plugin_api = { path = "../../crates/plugin_api" }
models = { path = "../../crates/models" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
schemars = "0.8"
lazy_static = "1.5.0"
